deploy/argocd/manifests/applications/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: todo
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: placeholder
  template:
    metadata:
      labels:
        app: placeholder
    spec:
      containers:
        - name: homer
          image: homer
          livenessProbe:
            httpGet:
              path: /assets/config.yml
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10 
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
