deploy/argocd/manifests/applications/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: todo
spec:
  type: ClusterIP
  selector:
    app: homer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
