deploy/argocd/manifests/applications/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: homer
  name: homer
  namespace: todo
spec:
  ingressClassName: traefik
  rules:
  - host: homer.scottseo.tech
    http:
      paths:
      - backend:
          service:
            name: homer
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - homer.scottseo.tech
    secretName: scottseo-tech-tls-homer
